@startuml

title __TASK14's Class Diagram__\n

  namespace  {
    namespace om.example.task14 {
      class com.example.task14.ActionChain {
      }
    }
  }
  

  namespace  {
    namespace om.example.task14 {
      abstract class com.example.task14.Handler {
      }
    }
  }
  

  namespace  {
    namespace om.example.task14 {
      class com.example.task14.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.task14 {
      class com.example.task14.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.task14 {
      class com.example.task14.NegativeHandler {
      }
    }
  }
  

  namespace  {
    namespace om.example.task14 {
      class com.example.task14.Nothing {
      }
    }
  }
  

  namespace  {
    namespace om.example.task14 {
      class com.example.task14.Player {
      }
    }
  }
  

  namespace  {
    namespace om.example.task14 {
      class com.example.task14.PositiveHandler {
      }
    }
  }
  

  com.example.task14.ActionChain o-- com.example.task14.Handler : chain
  com.example.task14.ActionChain o-- com.example.task14.Player : player
  com.example.task14.Handler o-- com.example.task14.Handler : processor
  com.example.task14.HelloApplication -up-|> javafx.application.Application
  com.example.task14.HelloController .up.|> javafx.fxml.Initializable
  com.example.task14.HelloController o-- com.example.task14.Player : player1
  com.example.task14.HelloController o-- com.example.task14.ActionChain : action
  com.example.task14.NegativeHandler -up-|> com.example.task14.Handler
  com.example.task14.NegativeHandler o-- com.example.task14.Player : player
  com.example.task14.Nothing -up-|> com.example.task14.Handler
  com.example.task14.Nothing o-- com.example.task14.Player : player
  com.example.task14.PositiveHandler -up-|> com.example.task14.Handler
  com.example.task14.PositiveHandler o-- com.example.task14.Player : player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
